--- a/fitlifepro/src/app/component/home/home.component.css
+++ b/fitlifepro/src/app/component/home/home.component.css
@@ -60,6 +60,7 @@ body {
 }
 .cart-button {
 
+  background: url('app/component/home/path-to-cart-icon.svg') no-repeat center;
   border: none;
   cursor: pointer;
 }
@@ -71,6 +72,32 @@ body {
   padding: 9px 27px;
   font-weight: 600;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+@media (max-width: 991px) {
+  .navbar-content {
+    flex-wrap: wrap;
+    padding: 0 20px;
+  }
+  .nav-links, .nav-actions {
+    flex-basis: 100%;
+    justify-content: center;
+  }
+  .nav-button {
+    padding: 9px 20px;
+  }
+}
+
+
 .visually-hidden {
   position: absolute;
   width: 1px;
