--- a/fitlifepro/src/app/component/workout/blogs/blogs.component.html
+++ b/fitlifepro/src/app/component/workout/blogs/blogs.component.html
@@ -124,6 +124,99 @@
     .read-more-button { margin-top: 40px; padding: 0 20px; }
     .all-articles-section { margin: 40px 10px 0 0; }
   }
+
+  .navbar {
+    font-family: Open Sans, sans-serif;
+    padding-top: 3px;
+  }
+  .navbar-content {
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 0px;
+    gap: 20px;
+  }
+  .company-logo {
+    aspect-ratio: 0.99;
+    object-fit: contain;
+    width: 149px;
+    margin-top: -6px;
+  }
+  .nav-links {
+    display: flex;
+    gap: 11px;
+    font-size: 18px;
+    color: #454545;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  .nav-link {
+    text-decoration: none;
+    color: inherit;
+  }
+  .nav-link-active {
+    color: #fed233;
+    font-weight: 600;
+  }
+  .nav-actions {
+    display: flex;
+    gap: 24px;
+    font-size: 24px;
+    align-items: center;
+  }
+  .cart-button {
+
+    background: url('app/component/home/path-to-cart-icon.svg') no-repeat center;
+    border: none;
+    cursor: pointer;
+  }
+  .nav-button {
+    border-radius: 20px;
+    background-color: #454545;
+    color: #fed233;
+    text-decoration: none;
+    padding: 9px 27px;
+    font-weight: 600;
+  }
+  .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+  }
+  @media (max-width: 991px) {
+    .navbar-content {
+      flex-wrap: wrap;
+      padding: 0 20px;
+    }
+    .nav-links, .nav-actions {
+      flex-basis: 100%;
+      justify-content: center;
+    }
+    .nav-button {
+      padding: 9px 20px;
+    }
+  }
+
+
+  .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+  }
 </style>
 
 
@@ -132,24 +225,25 @@
     <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/4e5188a6ffa33ceac53e40d44849bdb63fa0d1aea68f686be38a0c0e68f884c5?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Company Logo" class="company-logo" />
     <ul class="nav-links">
       <li><a href="home" class="nav-link nav-link-active">Home</a></li>
-      <li><a href="#" class="nav-link">About Us</a></li>
-      <li><a href="#" class="nav-link">Contact Us</a></li>
-      <li><a href="#" class="nav-link">Category</a></li>
-      <li><a href="#" class="nav-link">Blogs</a></li>
-      <li><a href="" class="nav-link">Recipes</a></li>
+      <li><a href="app-about-us" class="nav-link">About Us</a></li>
+      <li><a href="app-contact-us" class="nav-link">Contact Us</a></li>
+      <li><a href="app-category" class="nav-link">Category</a></li>
+      <li><a href="app-blogs" class="nav-link">Blogs</a></li>
+      <li><a href="app-all-recipe" class="nav-link">Recipes</a></li>
     </ul>
     <div class="nav-actions">
       <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/c40b77d621b039aa88ee37d9cd9f5caec0dae5a1264a5efa1db08d71e3b7e247?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Gift icon" class="gift-icon" />
 
-      <a href="#" class="nav-link">Gift A Plan</a>
+      <a href="app-gift-a-plan" class="nav-link">Gift A Plan</a>
       <button class="cart-button" aria-label="Shopping Cart">
         <span class="visually-hidden">Shopping Cart</span>
       </button>
-      <a href="#" class="nav-button">Login</a>
-      <a href="#" class="nav-button">Sign up</a>
+      <a href="app-login" class="nav-button">Login</a>
+      <a href="app-sign-up" class="nav-button">Sign up</a>
     </div>
   </div>
 </nav>
+
 <section class="blogs-section">
   <h1 class="section-title">Blogs <span style="color: #454545;">&</span> Articles</h1>
   <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam</p>
@@ -193,7 +287,7 @@
         <p class="article-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor...</p>
         <time class="article-date">24 January 2022</time>
         <span class="article-author">-Name here</span>
-        <a href="#" class="read-more-button">Read Article</a>
+        <a href="app-blogs1" class="read-more-button">Read Article</a>
       </div>
     </article>
 
