modify in partie front-end home

--- a/fitlifepro/src/app/component/dash/goal/goal.component.html
+++ b/fitlifepro/src/app/component/dash/goal/goal.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <mat-sidenav mode="side" opened>
     <div class="logo">
-      <img src="../../IMG/logoooo.png" alt="avatar" class="avatar"/>
+      <img src="../../../../../../IMG/logoooo.png" alt="avatar" class="avatar"/>
       <div class="user-info">
         <strong>chaimaa</strong>
       </div>
