--- a/fitlifepro/src/app/component/dash/dashboard/dashboard.component.html
+++ b/fitlifepro/src/app/component/dash/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav mode="side" opened>
   <div class="logo">
-    <img src="../../IMG/logo1.png" alt="avatar" class="avatar"/>
+    <img src="../../../../../../IMG/logo1.png" alt="avatar" class="avatar"/>
     <div class="user-info">
       <strong>chaimaa</strong>
     </div>
