--- a/fitlifepro/src/app/component/dash/user-dashboard/user-dashboard.component.html
+++ b/fitlifepro/src/app/component/dash/user-dashboard/user-dashboard.component.html
@@ -11,7 +11,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/dashboards">
         <mat-icon>dashboard</mat-icon>
-        <span class="bg-dark">Dashboard</span>
+        <span>Dashboard</span>
       </a>
       <a mat-list-item routerLink="/workout">
         <mat-icon>fitness_center</mat-icon>
