--- a/fitlifepro/src/app/component/landing-page/landing-page.component.css
+++ b/fitlifepro/src/app/component/landing-page/landing-page.component.css
@@ -60,7 +60,7 @@ body {
 }
 .cart-button {
 
-  background: url('app/component/home/path-to-cart-icon.svg') no-repeat center;
+  /*background: url('app/component/home/path-to-cart-icon.svg') no-repeat center;*/
   border: none;
   cursor: pointer;
 }
