--- a/fitlifepro/src/app/component/dash/dashboard/dashboard.component.html
+++ b/fitlifepro/src/app/component/dash/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <mat-nav-list>
-    <a mat-list-item routerLink="/dashboard">
+    <a mat-list-item routerLink="/over-view">
       <mat-icon>dashboard</mat-icon>
       <span>Dashboard</span>
     </a>
