--- a/fitlifepro/src/app/component/dash/user-dashboard/user-dashboard.component.html
+++ b/fitlifepro/src/app/component/dash/user-dashboard/user-dashboard.component.html
@@ -9,7 +9,7 @@
 
 
     <mat-nav-list>
-      <a mat-list-item routerLink="/dashboards">
+      <a mat-list-item routerLink="/over-view">
         <mat-icon>dashboard</mat-icon>
         <span>Dashboard</span>
       </a>
