--- a/fitlifepro/src/app/component/landing-page/landing-page.component.html
+++ b/fitlifepro/src/app/component/landing-page/landing-page.component.html
@@ -1478,29 +1478,7 @@
   }
 
 </style>
-<nav class="navbar">
-  <div class="navbar-content">
-    <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/4e5188a6ffa33ceac53e40d44849bdb63fa0d1aea68f686be38a0c0e68f884c5?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Company Logo" class="company-logo" />
-    <ul class="nav-links">
-      <li><a href="home" class="nav-link nav-link-active">Home</a></li>
-      <li><a href="app-about-us" class="nav-link">About Us</a></li>
-      <li><a href="app-contact-us" class="nav-link">Contact Us</a></li>
-      <li><a href="app-category" class="nav-link">Category</a></li>
-      <li><a href="app-blogs" class="nav-link">Blogs</a></li>
-      <li><a href="app-all-recipe" class="nav-link">Recipes</a></li>
-    </ul>
-    <div class="nav-actions">
-      <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/c40b77d621b039aa88ee37d9cd9f5caec0dae5a1264a5efa1db08d71e3b7e247?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Gift icon" class="gift-icon" />
-
-      <a href="app-gift-a-plan" class="nav-link">Gift A Plan</a>
-      <button class="cart-button" aria-label="Shopping Cart">
-        <span class="visually-hidden">Shopping Cart</span>
-      </button>
-      <a href="login" class="nav-button">Login</a>
-      <a href="sign-up" class="nav-button">Sign up</a>
-    </div>
-  </div>
-</nav>
+<app-header></app-header>
 
 <main>
 
