--- a/fitlifepro/src/app/component/dashboard/over-view/over-view.component.html
+++ b/fitlifepro/src/app/component/dashboard/over-view/over-view.component.html
@@ -3,10 +3,11 @@
     <mat-card>
       <mat-card-title>Total Calories Burned</mat-card-title>
       <mat-card-content style="background-color: aliceblue;">
-        <p>{{ statsData.totalCaloriesBurnes }}cal</p>
+        <p>{{ statsData?.totalCaloriesBurnes }}cal</p>
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
+
 
   <mat-grid-tile [colspan]="1" [rowspan]="1">
     <mat-card>
