--- a/fitlifepro/src/app/component/header/header.component.css
+++ b/fitlifepro/src/app/component/header/header.component.css
@@ -1,8 +1,8 @@
 .main-header {
   background-color: #fff;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  gap: 40px 100px;
   font-family: Open Sans, sans-serif;
   padding: 0 30px;
 }
