--- a/fitlifepro/src/app/component/header/header.component.html
+++ b/fitlifepro/src/app/component/header/header.component.html
@@ -2,7 +2,7 @@
   <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/372f60e4228164299af14df192be288d95a20b0a28f094c02fd206a955333beb?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Company Logo" class="company-logo" />
 
   <nav class="main-navigation">
-    <a routerLink="/" routerLinkActive="nav-link-active" class="nav-link">Home</a>
+    <a routerLink="/home" routerLinkActive="nav-link-active" class="nav-link">Home</a>
     <a routerLink="/about-us" routerLinkActive="nav-link-active" class="nav-link">About Us</a>
     <a routerLink="/contact-us" routerLinkActive="nav-link-active" class="nav-link">Contact Us</a>
     <a routerLink="/category" routerLinkActive="nav-link-active" class="nav-link">Category</a>
