--- a/fitlifepro/src/app/component/dashboard/over-view/over-view.component.html
+++ b/fitlifepro/src/app/component/dashboard/over-view/over-view.component.html
@@ -73,34 +73,23 @@
 </div>
 
 
-<div class="mat-grid" style="margin-top: 1px;">
-  <mat-grid-list cols="12" gutterSize="16px">
-    <mat-grid-tile [colspan]="2" [rowspan]="1" class="hidden-xs"></mat-grid-tile>
-    <mat-grid-tile [colspan]="4" [rowspan]="1" class="hidden-sm"></mat-grid-tile>
-    <mat-grid-tile [colspan]="6" [rowspan]="1" class="hidden-md"></mat-grid-tile>
-    <mat-grid-tile [colspan]="8" [rowspan]="1" class="hidden-lg"></mat-grid-tile>
-    <mat-grid-tile [colspan]="10" [rowspan]="1" class="hidden-xl"></mat-grid-tile>
+<div class="canvas-container d-flex flex-lg-row flex-md-column flex-sm-column gap-2">
 
-    <mat-grid-tile [colspan]="8" [rowspan]="1" class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-2">
-      <mat-card style="background-color: aliceblue;">
-        <mat-card-title>Recent Workouts</mat-card-title>
-        <mat-card-content>
-          <canvas #workoutLineChart></canvas>
-        </mat-card-content>
-      </mat-card>
-    </mat-grid-tile>
-
-    <mat-grid-tile [colspan]="4" [rowspan]="1" class="hidden-xs hidden-sm hidden-md hidden-lg hidden-xl">
-    </mat-grid-tile>
-
-    <mat-grid-tile [colspan]="8" [rowspan]="1" class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-2">
-      <mat-card style="background-color: aliceblue;">
-        <mat-card-title>Recent Activities</mat-card-title>
-        <mat-card-content>
-          <canvas #activityLineChart></canvas>
-        </mat-card-content>
-      </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
+  <div class="col-lg-6 col-md-12 col-sm-12">
+    <div class="card" style="background-color: aliceblue; padding: 16px;">
+      <div class="card-title">Recent Workouts</div>
+      <div class="card-content">
+        <canvas #workoutLineChart></canvas>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-6 col-md-12 col-sm-12">
+    <div class="card"  style="background-color: aliceblue; padding: 16px;">
+      <div class="card-title">Recent Activities</div>
+      <div class="card-content">
+        <canvas #activityLineChart></canvas>
+      </div>
+    </div>
+  </div>
 </div>
 
